--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Header */
 header {
     background-color: skyblue;
-    background-image: url(../html-css-booleaner/img/pattern.png);
+    background-image: url(img/pattern.png);
     padding-top: 35px;
 }
 
@@ -45,7 +45,7 @@ table {
 
 /* Paragrafo e foto */
 .img-1 {
-    background-image: url(../html-css-booleaner/img/monitor.jpg);
+    background-image: url(img/monitor.jpg);
     background-repeat: no-repeat;
     color: white;
     width: 400px;
@@ -54,7 +54,7 @@ table {
 }
 
 .img-2 {
-    background-image: url(../html-css-booleaner/img/graph.jpg);
+    background-image: url(img/graph.jpg);
     background-repeat: no-repeat;
     color: white;
     width: 400px;
